# sigma-thermal

./: .gitignore  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_INSTRUCTIONS.md  DOCUMENTATION_CONSOLIDATION.md  HTML_DOCUMENTATION_SUMMARY.md  LICENSE  README.md  UX_IMPROVEMENTS_SUMMARY.md  deploy-azure.sh  pyproject.toml  requirements-dev.txt  requirements.txt  run_calculators.sh  setup.py
.claude/: settings.local.json
.github/: README.md
.github/workflows/: azure-static-web-apps-happy-stone-07cb3850f.yml  azure-static-web-apps.yml  ci.yml
api/: host.json  requirements.txt
api/heating_value/: __init__.py  function.json
docs/: EXECUTIVE_SUMMARY.md  README.md  migration-guide.html  progress.html  resources.html  test-results.html
docs/archive/: COMPREHENSIVE_PROGRESS.md  EXCEL_VBA_DISCREPANCIES.md  FLUIDS_VALIDATION_PLAN.md  PHASE1_COMPLETION_SUMMARY.md  PHASE3_COMPLETION_SUMMARY.md  UI_IMPLEMENTATION_SUMMARY.md
docs/archive/old-root-docs/: CLAUDE.md  EXCEL_TO_PYTHON_MIGRATION_PLAN.md
docs/azure-deployment/: deployment-guide.md
docs/css/: docs.css
docs/development/: getting_started.html
docs/excel-udf/: README.md
excel_udf/: QUICK_REFERENCE.md  README.md  requirements.txt  sigma_thermal_udf.py  xlwings.conf
extracted/: Engineering-Functions.vba  HC2-Calculators.vba  VBA_FUNCTION_INVENTORY.md  function_inventory.json
scripts/: extract_lookup_tables.py  parse_vba_functions.py
sources/: Engineering-Functions.xlam
src/sigma_thermal/: __init__.py
src/sigma_thermal/calculators_streamlit_backup/: README.md  app.py
tests/: conftest.py
tests/integration/: test_integration_boiler_efficiency.py
tests/unit/: test_combustion_air_fuel.py  test_combustion_efficiency.py  test_combustion_emissions.py  test_combustion_enthalpy.py  test_combustion_flame_temperature.py  test_combustion_heating_values.py  test_combustion_products.py  test_fluids_water_properties.py  test_interpolation.py  test_units.py
tests/validation/: test_validation_framework.py  test_validation_liquid_fuel.py  test_validation_methane_combustion.py  test_validation_natural_gas.py
web/: README.md  index.html  resource.html  staticwebapp.config.json
web/calculators/: heating-value.html
web/css/: style.css
web/docs/: DOCUMENTATION_INDEX.md  index.html
web/js/: heating-value.js
(+39 files in other folders)
